<resources>
    <string name="app_name">Fade Salon</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Wellcome</string>
    <string name="nav_header_subtitle">The best BarberShop in the country.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_appointment">Make An Appointment</string>
    <string name="menu_login">Login</string>
    <string name="menu_register">Not Used</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_admin">Admin Dashboard</string>
    <string name="menu_reachUs">Reach Us</string>
    <string name="menu_aboutUs">About Us</string>


    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
