<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_appointment"
            android:title="@string/menu_appointment" />
    </group>


    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_login"
                    android:icon="@drawable/ic_login"
                    android:title="@string/menu_login" />

                <item
                    android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/menu_profile" />
                <item
                    android:id="@+id/nav_admin"
                    android:icon="@drawable/ic_manager"
                    android:title="@string/menu_admin" />

            </group>
        </menu>
    </item>


    <item android:title="Communicate">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_reachUs"
                    android:icon="@drawable/ic_map"
                    android:title="@string/menu_reachUs" />
                <item
                    android:id="@+id/nav_aboutUs"
                    android:icon="@drawable/ic_aboutus"
                    android:title="@string/menu_aboutUs" />

            </group>
        </menu>
    </item>


</menu>
